cmake_minimum_required(VERSION 3.17)
project(c_learn C)

set(CMAKE_C_STANDARD 99)

link_libraries(ws2_32 wsock32)

add_executable(c_learn main.c)
add_executable(demo_3.4.3 charpter3/demo_3.4.3.c)
add_executable(demo_3.4.5 charpter3/demo_3.4.5.c)
add_executable(demo_3.5.1 charpter3/demo_3.5.1.c)
add_executable(demo_3.5.2 charpter3/demo_3.5.2.c)
add_executable(demo_3.5.3 charpter3/demo_3.5.3.c)
add_executable(demo_3.6.1 charpter3/demo_3.6.1.c)
add_executable(demo_3.6.2_2 charpter3/demo_3.6.2_2.c)
add_executable(demo_3.6.2_1 charpter3/demo_3.6.2_1.c)
add_executable(demo_3.7.1 charpter3/demo_3.7.1.c)
add_executable(demo_4.1 charpter4/demo_4.1.c)
add_executable(demo_4.2 charpter4/demo_4.2.c)
add_executable(demo_4.3 charpter4/demo_4.3.c)
add_executable(demo_4.4 charpter4/demo_4.4.c)
add_executable(demo_4.5 charpter4/demo_4.5.c)
add_executable(demo_4.6 charpter4/demo_4.6.c)
add_executable(demo_4.7 charpter4/demo_4.7.c)
add_executable(demo_4.8 charpter4/demo_4.8.c)
add_executable(demo_4.9 charpter4/demo_4.9.c)
add_executable(demo_5.1 charpter5/demo_5.1.c)
add_executable(demo_5.2 charpter5/demo_5.2.c)
add_executable(demo_5.3 charpter5/demo_5.3.c)
add_executable(demo_5.4 charpter5/demo_5.4.c)
add_executable(demo_5.5 charpter5/demo_5.5.c)
add_executable(demo_5.6 charpter5/demo_5.6.c)
add_executable(demo_5.7 charpter5/demo_5.7.c)
add_executable(demo_5.8 charpter5/demo_5.8.c)
add_executable(demo_6.1 charpter6/demo_6.1.c)
add_executable(demo_6.2 charpter6/demo_6.2.c)
add_executable(demo_6.3 charpter6/demo_6.3.c)
add_executable(demo_6.4 charpter6/demo_6.4.c)
add_executable(demo_6.5 charpter6/demo_6.5.c)
add_executable(demo_6.6 charpter6/demo_6.6.c)
add_executable(demo_6.7 charpter6/demo_6.7.c)
add_executable(demo_6.8 charpter6/demo_6.8.c)
add_executable(demo_6.9 charpter6/demo_6.9.c)
add_executable(demo_6.10 charpter6/demo_6.10.c)
add_executable(demo_6.11 charpter6/demo_6.11.c)
add_executable(demo_6.12 charpter6/demo_6.12.c)
add_executable(demo_7.1 charpter7/demo_7.1.c)
add_executable(demo_7.2 charpter7/demo_7.2.c)
add_executable(demo_7.3 charpter7/demo_7.3.c)
add_executable(demo_7.4 charpter7/demo_7.4.c)
add_executable(demo_7.5 charpter7/demo_7.5.c)
add_executable(demo_7.6 charpter7/demo_7.6.c)
add_executable(demo_7.7 charpter7/demo_7.7.c)
add_executable(demo_7.8 charpter7/demo_7.8.c)
add_executable(demo_7.9 charpter7/demo_7.9.c)
add_executable(demo_7.10 charpter7/demo_7.10.c)
add_executable(demo_8.1 charpter8/demo_8.1.c)
add_executable(demo_8.2 charpter8/demo_8.2.c)
add_executable(demo_8.3 charpter8/demo_8.3.c)
add_executable(demo_8.4 charpter8/demo_8.4.c)
add_executable(demo_8.5 charpter8/demo_8.5.c)
add_executable(demo_8.6 charpter8/demo_8.6.c)
add_executable(demo_8.7 charpter8/demo_8.7.c)
add_executable(demo_8.8 charpter8/demo_8.8.c)
add_executable(demo_8.9 charpter8/demo_8.9.c)
add_executable(demo_8.10 charpter8/demo_8.10.c)
add_executable(demo_8.11 charpter8/demo_8.11.c)
add_executable(demo_8.12 charpter8/demo_8.12.c)
add_executable(demo_8.13 charpter8/demo_8.13.c)
add_executable(demo_8.14 charpter8/demo_8.14.c)
add_executable(demo_8.15 charpter8/demo_8.15.c)
add_executable(demo_8.16 charpter8/demo_8.16.c)
add_executable(demo_8.17 charpter8/demo_8.17.c)
add_executable(demo_8.18 charpter8/demo_8.18.c)
add_executable(demo_8.19 charpter8/demo_8.19.c)
add_executable(demo_8.20 charpter8/demo_8.20.c)
add_executable(demo_8.21 charpter8/demo_8.21.c)
add_executable(demo_8.22 charpter8/demo_8.22.c)
add_executable(demo_8.23 charpter8/demo_8.23.c)
add_executable(demo_9.1 charpter9/demo_9.1.c)
add_executable(demo_9.2 charpter9/demo_9.2.c)
add_executable(demo_9.3 charpter9/demo_9.3.c)
add_executable(demo_9.4 charpter9/demo_9.4.c)
add_executable(demo_9.5 charpter9/demo_9.5.c)
add_executable(my_test01 charpter9/my_test01.c)
add_executable(demo_9.6 charpter9/demo_9.6.c)
add_executable(demo_9.7 charpter9/demo_9.7.c)
add_executable(demo_9.8 charpter9/demo_9.8.c)
add_executable(demo_9.9 charpter9/demo_9.9.c)
add_executable(demo_9.10 charpter9/demo_9.10.c)
add_executable(demo_9.11 charpter9/demo_9.11.c)
add_executable(demo_9.12 charpter9/demo_9.12.c)
add_executable(demo_9.13 charpter9/demo_9.13.c)
add_executable(demo_9.15 charpter9/demo_9.15.c)
add_executable(demo_9.16 charpter9/demo_9.16.c)
add_executable(demo_9.17 charpter9/demo_9.17.c)
add_executable(demo_9.18 charpter9/demo_9.18.c)
add_executable(demo_9.19 charpter9/demo_9.19.c)
add_executable(demo_9.20 charpter9/demo_9.20.c)
add_executable(demo_9.21 charpter9/demo_9.21.c)
add_executable(demo_9.22 charpter9/demo_9.22.c)
add_executable(demo_10.1 charpter10/demo_10.1.c)
add_executable(demo_10.2 charpter10/demo_10.2.c)
add_executable(my_test02 charpter10/my_test02.c)
add_executable(demo_10.3 charpter10/demo_10.3.c)
add_executable(demo_10.4 charpter10/demo_10.4.c)
add_executable(demo_10.5 charpter10/demo_10.5.c)
add_executable(demo_10.6 charpter10/demo_10.6.c)
add_executable(demo_10.7 charpter10/demo_10.7.c)
add_executable(demo_10.7_2 charpter10/demo_10.7_2.c)
add_executable(demo_10.7_3 charpter10/demo_10.7_3.c)
add_executable(demo_10.8 charpter10/demo_10.8.c)
add_executable(demo_10.9 charpter10/demo_10.9.c)
add_executable(demo_10.10 charpter10/demo_10.10.c)
add_executable(demo_10.11 charpter10/demo_10.11.c)
add_executable(demo_10.12 charpter10/demo_10.12.c)
add_executable(demo_10.13 charpter10/demo_10.13.c)
add_executable(demo_10.14 charpter10/demo_10.14.c)
add_executable(demo_10.15 charpter10/demo_10.15.c)
add_executable(demo_10.16 charpter10/demo_10.16.c)
add_executable(demo_10.17 charpter10/demo_10.17.c)
add_executable(demo_10.18 charpter10/demo_10.18.c)
add_executable(demo_10.19 charpter10/demo_10.19.c)
add_executable(demo_10.20 charpter10/demo_10.20.c)
add_executable(demo_10.20_2 charpter10/demo_10.20_2.c)
add_executable(demo_10.21 charpter10/demo_10.21.c)
add_executable(demo_11.01 charpter11/demo_11.01.c)
add_executable(demo_11.02 charpter11/demo_11.02.c)
add_executable(demo_11.03 charpter11/demo_11.03.c)
add_executable(demo_11.04 charpter11/demo_11.04.c)
add_executable(demo_11.05 charpter11/demo_11.05.c)
add_executable(demo_11.06 charpter11/demo_11.06.c)
add_executable(demo_11.07 charpter11/demo_11.07.c)
add_executable(demo_11.08 charpter11/demo_11.08.c)
add_executable(demo_11.09 charpter11/demo_11.09.c)
add_executable(demo_11.10 charpter11/demo_11.10.c)
add_executable(demo_11.11 charpter11/demo_11.11.c)
add_executable(demo_12.01 charpter12/demo_12.01.c)
add_executable(demo_12.02 charpter12/demo_12.02.c)
add_executable(demo_12.03 charpter12/demo_12.03.c)
add_executable(demo_13.01 charpter13/demo_13.01.c)
add_executable(demo_13.02 charpter13/demo_13.02.c)
add_executable(demo_13.03 charpter13/demo_13.03.c)
add_executable(demo_13.04 charpter13/demo_13.04.c)
add_executable(demo_13.05 charpter13/demo_13.05.c)
add_executable(demo_13.06 charpter13/demo_13.06.c)
add_executable(demo_13.07 charpter13/demo_13.07.c)
add_executable(demo_13.08 charpter13/demo_13.08.c)
add_executable(demo_14.01 charpter14/demo_14.01.c)
add_executable(demo_14.02 charpter14/demo_14.02.c)
add_executable(Age charpter14/Age.h)
add_executable(demo_14.03 charpter14/demo_14.03.c)
add_executable(demo_14.04 charpter14/demo_14.04.c)
add_executable(demo_14.05 charpter14/demo_14.05.c)
add_executable(demo_14.06 charpter14/demo_14.06.c)
add_executable(demo_14.07 charpter14/demo_14.07.c)
add_executable(demo_15_01 charpter15/demo_15_01.c)
add_executable(demo_15.02 charpter15/demo_15_02.c)
add_executable(demo_15_03 charpter15/demo_15_03.c)
add_executable(demo_15_04 charpter15/demo_15_04.c)
add_executable(demo_15_05 charpter15/demo_15_05.c)
add_executable(demo_15_06 charpter15/demo_15_06.c)
add_executable(demo_15_07 charpter15/demo_15_07.c)
add_executable(demo_15_08 charpter15/demo_15_08.c)
add_executable(demo_15_09 charpter15/demo_15_09.c)
add_executable(demo_15_10 charpter15/demo_15_10.c)
add_executable(demo_15_11 charpter15/demo_15_11.c)
add_executable(demo_16_01 charpter16/demo_16_01.c)
add_executable(demo_16_02 charpter16/demo_16_02.c)
add_executable(demo_16_03 charpter16/demo_16_03.c)
add_executable(demo_16_04 charpter16/demo_16_04.c)
add_executable(demo_16_05 charpter16/demo_16_05.c)
add_executable(demo_16_06 charpter16/demo_16_06.c)
add_executable(demo_17_service charpter17/demo_17_service.c)
add_executable(demo_17_client charpter17/demo_17_client.c)